Adding HTML Portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   <link rel="stylesheet" href="main.css">
-  <title>HTML Portfolio</title>
+  <title>HTML Portfolio - Cody Gerres</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+  <div class="header">
+    <h1>Cody Gerres</h1>
+    <h2>EFCC EDD Senior Analyst & Wannabe Programmer</h2>
+  </div>
+  <div class="tagline">
+    <h3>This will be extra information about me.</h3>
+    <p>This will be an introductory paragraph about my interests</p>
+  </div>
+  <div class"skills">
+    <h3>Here is a list of my skills</h3>
+    <p>Add a description of what you enjoy doing with these skills</p>
+    <ul>
+      <li>Microsoft Excel</li>
+      <li>AML/BSA Investigations</li>
+      <li>Putting out fires, figuratively</li>
+      <li>Maybe more?</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>Here is how to contact me</h3>
+    <p><a href="mailto:cody.gerres@gmail.com?Subject=Hello" target="_top">Send an email</a>
 </body>
 </html>
